# profiling-example

./: Cargo.toml  README.md
examples/: puffin.rs
