[package]
name = "profiling-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puffin_egui = "0.20"
indexmap = { version = "1.9.1", features = ["serde"] }
instant = "0.1"
natord = "1.0.9"
once_cell = "1.7"
puffin = "0.14.3"
serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3.17", default-features = false, features = [ "formatting", "macros" ] }
vec1 = "1.8"
eframe = { version = "0.21.0", default-features = false, features = ["persistence", "glow", "default_fonts"] }
